--- a/index.html
+++ b/index.html
@@ -5,7 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+<style>
+body{
+    background-image: url("tpr negra.jpg");
+}
+
+
+
+
+
+</style>
 </head>
 <body>
-    Hola klkaaaaa
+
+
+
+
+
+
+
+
+
+   </body>
 </html>
