--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 <style>
 body{
     background-image: url("tpr negra.jpg");
+    background-image: no-repeat;
+    background-image: fixed;
+    background-image: center;
+    background-
+  
 }
 
 
