--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ body{
     background-image: no-repeat;
     background-image: fixed;
     background-image: center;
-    background-
+background-size: 60%;
   
 }
 
