--- a/index.html
+++ b/index.html
@@ -6,14 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 <style>
-body{
-    background-image: url("tpr negra.jpg");
-    background-image: no-repeat;
-    background-image: fixed;
-    background-image: center;
-background-size: 60%;
-  
+div:first-of-type{
+    background-image:url("tpr negra.jpg");
+background: no-repeat;
 }
+  
 
 
 
@@ -22,7 +19,7 @@ background-size: 60%;
 </style>
 </head>
 <body>
-
+<div></div>
 
 
 
