--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 <style>
-div:first-of-type{
-    background-image:url("tpr negra.jpg");
-background: no-repeat;
-}
+body{
+    background-image: url("tpr negra.jpg");
+    background:no-repeat;
+    background-image: center;
+
   
+}
 
 
 
@@ -19,7 +21,7 @@ background: no-repeat;
 </style>
 </head>
 <body>
-<div></div>
+
 
 
 
