--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 <style>
 body{
     background-image: url("tpr negra.jpg");
-    background:no-repeat;
+  background-repeat: no-repeat;
+    background-image: fixed;
     background-image: center;
 
   
