--- a/index.html
+++ b/index.html
@@ -6,12 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 <style>
+     html {
+        height:100%;
+        width:100%;
+    }
 body{
     background-image: url("tpr negra.jpg");
   background-repeat: no-repeat;
     background-image: fixed;
     background-image: center;
-
+background-size: 100% 100%;
   
 }
 
@@ -22,7 +26,9 @@ body{
 </style>
 </head>
 <body>
+<div id="Contenedor">
 
+</div>
 
 
 
