--- a/index.html
+++ b/index.html
@@ -18,7 +18,13 @@ body{
 background-size: 100% 100%;
   
 }
-
+div#Contenedor{
+position:fixed;
+width: 450px;
+height: 100%;
+text-align: center;
+background-color: black;
+}
 
 
 
@@ -29,7 +35,10 @@ background-size: 100% 100%;
 <div id="Contenedor">
 <div>
     <ul>
-        <li></li>
+        <li><img src="Letras.jpg"></li>
+        <li>Integrantes</li>
+        <li>Giras</li>
+        <li>Tienda</li>
     </ul>
 </div>
 </div>
