--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@ div.Menu1 ul li{
     padding:15px 10px;
     list-style:none;
     border-bottom: 1px solid white;
+    margin-right: 20px;
+    font-size: 20px;
 }
 
 
