--- a/Integrantes.html
+++ b/Integrantes.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Integrantes</title>
 
 
 
@@ -13,6 +13,6 @@
     
 </head>
 <body>
-    
+    <a name="integrantes"></a>
 </body>
 </html>
