--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>The Pretty Rekless</title>
     <link href="https://fonts.googleapis.com/css?family=Rubik+Mono+One&display=swap" rel="stylesheet">
-Specify in CSS
+
 <style>
 
      html {
@@ -25,7 +25,7 @@ background-size: 100% 100%;
 div#Contenedor{
 position:fixed;
 margin-left: -30px;
-margin-top:-15px ;
+margin-top:-30px ;
 width: 700px;
 height: 100%;
 text-align: center;
@@ -39,6 +39,7 @@ div.Menu1 ul li{
     border-bottom: 1px solid white;
     margin-right: 20px;
     font-size: 20px;
+    text-decoration:none;
 }
 
 
@@ -51,9 +52,9 @@ div.Menu1 ul li{
 <div class="Menu1">
     <ul>
         <li><img class="titulo" src="nombre2.jpg"></li>
-        <li><a name="#Integrantes">Integrantes</a></li>
-        <li><a name="#Giras">Giras</a></li>
-        <li><a name="#Tienda">Tienda</a></li>
+        <li><a href="#integrantes">Integrantes</a></li>
+        <li><a href="#Giras">Integrantes</a></li>
+        <li><a href="#Tienda">Integrantes</a></li>
     </ul>
 </div>
 </div>
