--- a/index.html
+++ b/index.html
@@ -25,13 +25,18 @@ background-size: 100% 100%;
 div#Contenedor{
 position:fixed;
 margin-left: -30px;
-margin-top:-30px ;
-width: 700px;
+margin-top:-10px ;
+
 height: 100%;
 text-align: center;
 background-color: black;
 color: white;
 }
+div#Contenedor2{
+
+}
+
+
 div.Menu1 ul li{
     font-family: 'Rubik Mono One', sans-serif;
     padding:15px 10px;
@@ -39,9 +44,17 @@ div.Menu1 ul li{
     border-bottom: 1px solid white;
     margin-right: 20px;
     font-size: 20px;
-    text-decoration:none;
+    
+   
 }
-
+div.Menu1 ul li a{
+    text-decoration:none;
+    color: white;
+}
+div.Menu1 ul li a:hover{
+    text-decoration:none;
+   font-size: 25px;
+}
 
 
 
@@ -49,12 +62,13 @@ div.Menu1 ul li{
 </head>
 <body>
 <div id="Contenedor">
+    <div id="Contenedor2"></div>
 <div class="Menu1">
     <ul>
         <li><img class="titulo" src="nombre2.jpg"></li>
-        <li><a href="#integrantes">Integrantes</a></li>
-        <li><a href="#Giras">Integrantes</a></li>
-        <li><a href="#Tienda">Integrantes</a></li>
+        <li><a href="Integrantes.html">Integrantes</a></li>
+        <li><a href="Giras.html">Giras</a></li>
+        <li><a href="Tienda.html">Tienda</a></li>
     </ul>
 </div>
 </div>
