--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
         height:100%;
         width:100%;
     }
+    div.Menu1 ul li img{
+     
+    }
 body{
     background-image: url("tpr negra.jpg");
   background-repeat: no-repeat;
@@ -26,13 +29,15 @@ div#Contenedor{
 position:fixed;
 margin-left: -30px;
 margin-top:-10px ;
-
+display: flex;
+flex-direction: column;
 height: 100%;
 text-align: center;
 background-color: black;
 color: white;
 }
 div#Contenedor2{
+display: flex;
 
 }
 
@@ -53,7 +58,8 @@ div.Menu1 ul li a{
 }
 div.Menu1 ul li a:hover{
     text-decoration:none;
-   font-size: 25px;
+   font-size: 22px;
+ 
 }
 
 
