--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ position:fixed;
 margin-left: -30px;
 margin-top:-10px ;
 display: flex;
-flex-direction: column;
+flex-direction: row;
 height: 100%;
 text-align: center;
 background-color: black;
