--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+    
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,14 +9,15 @@
     <link href="https://fonts.googleapis.com/css?family=Rubik+Mono+One&display=swap" rel="stylesheet">
 
 <style>
+@media (max-width: 720px){
+
+}
 
      html {
         height:100%;
         width:100%;
     }
-    div.Menu1 ul li img{
-     
-    }
+  
 body{
     background-image: url("tpr negra.jpg");
   background-repeat: no-repeat;
