--- a/index.html
+++ b/index.html
@@ -10,7 +10,19 @@
 
 <style>
 @media (max-width: 720px){
-
+.t40m{
+    width: 40%;
+}
+}
+@media (min-width: 721px) and (max-width: 1024px){
+.t40m{
+    width: 40%;
+}
+}
+@media (min-width: 1025px){
+.t40m{
+    width: 40%;
+}
 }
 
      html {
@@ -69,7 +81,7 @@ div.Menu1 ul li a:hover{
 </style>
 </head>
 <body>
-<div id="Contenedor">
+<div class="t40m" id="Contenedor">
     <div id="Contenedor2"></div>
 <div class="Menu1">
     <ul>
