--- a/index.html
+++ b/index.html
@@ -9,21 +9,7 @@
     <link href="https://fonts.googleapis.com/css?family=Rubik+Mono+One&display=swap" rel="stylesheet">
 
 <style>
-@media (max-width: 720px){
-.t40m{
-    width: 40%;
-}
-}
-@media (min-width: 721px) and (max-width: 1024px){
-.t40m{
-    width: 40%;
-}
-}
-@media (min-width: 1025px){
-.t40m{
-    width: 40%;
-}
-}
+
 
      html {
         height:100%;
@@ -38,7 +24,11 @@ body{
 background-size: 100% 100%;
   
 }
-
+div#Contenedor2{
+    color: white;
+    font-family: 'Rubik Mono One', sans-serif;
+    
+}
 div#Contenedor{
 position:fixed;
 margin-left: -30px;
@@ -49,10 +39,6 @@ height: 100%;
 text-align: center;
 background-color: black;
 color: white;
-}
-div#Contenedor2{
-display: flex;
-
 }
 
 
@@ -81,8 +67,8 @@ div.Menu1 ul li a:hover{
 </style>
 </head>
 <body>
-<div class="t40m" id="Contenedor">
-    <div id="Contenedor2"></div>
+<div id="Contenedor">
+    <div id="Contenedor2">Registrarse</div>
 <div class="Menu1">
     <ul>
         <li><img class="titulo" src="nombre2.jpg"></li>
