--- a/index.html
+++ b/index.html
@@ -17,24 +17,19 @@
     }
   
 body{
-    background-image: url("tpr negra.jpg");
+    background-image: url("./imagenes/tpr negra.jpg");
   background-repeat: no-repeat;
     background-image: fixed;
     background-image: center;
 background-size: 100% 100%;
   
 }
-div#Contenedor2{
-    color: white;
-    font-family: 'Rubik Mono One', sans-serif;
-    
-}
+
+
 div#Contenedor{
 position:fixed;
 margin-left: -30px;
 margin-top:-10px ;
-display: flex;
-flex-direction: row;
 height: 100%;
 text-align: center;
 background-color: black;
@@ -67,11 +62,12 @@ div.Menu1 ul li a:hover{
 </style>
 </head>
 <body>
+   
 <div id="Contenedor">
-    <div id="Contenedor2">Registrarse</div>
+   
 <div class="Menu1">
     <ul>
-        <li><img class="titulo" src="nombre2.jpg"></li>
+        <li><img class="titulo" src="./imagenes/nombre2.jpg"></li>
         <li><a href="Integrantes.html">Integrantes</a></li>
         <li><a href="Giras.html">Giras</a></li>
         <li><a href="Tienda.html">Tienda</a></li>
