--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
     <link href="https://fonts.googleapis.com/css?family=Rubik+Mono+One&display=swap" rel="stylesheet">
 
 <style>
-
+@media (min-width: width 1024px){
+.t40{
+    width:40%;
+}
+}
 
      html {
         height:100%;
@@ -63,7 +67,7 @@ div.Menu1 ul li a:hover{
 </head>
 <body>
    
-<div id="Contenedor">
+<div class="t40" id="Contenedor">
    
 <div class="Menu1">
     <ul>
@@ -71,6 +75,7 @@ div.Menu1 ul li a:hover{
         <li><a href="Integrantes.html">Integrantes</a></li>
         <li><a href="Giras.html">Giras</a></li>
         <li><a href="Tienda.html">Tienda</a></li>
+        <li><a href="Tienda.html">Discos</a></li>
     </ul>
 </div>
 </div>
