--- a/index.html
+++ b/index.html
@@ -9,11 +9,6 @@
     <link href="https://fonts.googleapis.com/css?family=Rubik+Mono+One&display=swap" rel="stylesheet">
 
 <style>
-@media (min-width: width 1024px){
-.t40{
-    width:40%;
-}
-}
 
      html {
         height:100%;
@@ -38,6 +33,11 @@ height: 100%;
 text-align: center;
 background-color: black;
 color: white;
+width: 40%;
+ max-width: 1024px;
+}
+img{
+    width:80% ;
 }
 
 
@@ -67,7 +67,7 @@ div.Menu1 ul li a:hover{
 </head>
 <body>
    
-<div class="t40" id="Contenedor">
+<div id="Contenedor">
    
 <div class="Menu1">
     <ul>
