--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     }
   
 body{
-    background-image: url("./imagenes/tpr negra.jpg");
+    background-image: url("./Imagenes/tpr negra.jpg");
   background-repeat: no-repeat;
     background-image: fixed;
     background-image: center;
@@ -71,7 +71,7 @@ div.Menu1 ul li a:hover{
    
 <div class="Menu1">
     <ul>
-        <li><img class="titulo" src="./imagenes/nombre2.jpg"></li>
+        <li><img class="titulo" src="./Imagenes/nombre2.jpg"></li>
         <li><a href="Integrantes.html">Integrantes</a></li>
         <li><a href="Giras.html">Giras</a></li>
         <li><a href="Tienda.html">Tienda</a></li>
