--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ div.Menu1 ul li{
     border-bottom: 1px solid white;
     margin-right: 20px;
     font-size: 20px;
-    
+    width: 90%;
    
 }
 div.Menu1 ul li a{
