--- a/index.html
+++ b/index.html
@@ -10,14 +10,13 @@
 
 <style>
 
-
      html {
         height:100%;
         width:100%;
     }
   
 body{
-    background-image: url("./imagenes/tpr negra.jpg");
+    background-image: url("./Imagenes/tpr negra.jpg");
   background-repeat: no-repeat;
     background-image: fixed;
     background-image: center;
@@ -34,6 +33,11 @@ height: 100%;
 text-align: center;
 background-color: black;
 color: white;
+width: 40%;
+ max-width: 1024px;
+}
+img{
+    width:80% ;
 }
 
 
@@ -44,7 +48,7 @@ div.Menu1 ul li{
     border-bottom: 1px solid white;
     margin-right: 20px;
     font-size: 20px;
-    
+    width: 90%;
    
 }
 div.Menu1 ul li a{
@@ -67,10 +71,11 @@ div.Menu1 ul li a:hover{
    
 <div class="Menu1">
     <ul>
-        <li><img class="titulo" src="./imagenes/nombre2.jpg"></li>
+        <li><img class="titulo" src="./Imagenes/nombre2.jpg"></li>
         <li><a href="Integrantes.html">Integrantes</a></li>
         <li><a href="Giras.html">Giras</a></li>
         <li><a href="Tienda.html">Tienda</a></li>
+        <li><a href="Tienda.html">Discos</a></li>
     </ul>
 </div>
 </div>
