--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-    
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,77 +8,79 @@
     <title>The Pretty Rekless</title>
     <link href="https://fonts.googleapis.com/css?family=Rubik+Mono+One&display=swap" rel="stylesheet">
 
-<style>
+    <style>
+        html {
+            height: 100%;
+            width: 100%;
+        }
 
-     html {
-        height:100%;
-        width:100%;
-    }
-  
-body{
-    background-image: url("./Imagenes/tpr negra.jpg");
-  background-repeat: no-repeat;
-    background-image: fixed;
-    background-image: center;
-background-size: 100% 100%;
-  
-}
+        body {
+            background-image: url("./Imagenes/tpr negra.jpg");
+            background-repeat: no-repeat;
+            background-image: fixed;
+            background-image: center;
+            background-size: 100% 100%;
+    width: 100%;
 
-
-div#Contenedor{
-position:fixed;
-margin-left: -30px;
-margin-top:-10px ;
-height: 100%;
-text-align: center;
-background-color: black;
-color: white;
-width: 40%;
- max-width: 1024px;
-}
-img{
-    width:80% ;
-}
+        }
 
 
-div.Menu1 ul li{
-    font-family: 'Rubik Mono One', sans-serif;
-    padding:15px 10px;
-    list-style:none;
-    border-bottom: 1px solid white;
-    margin-right: 20px;
-    font-size: 20px;
-    width: 90%;
-   
-}
-div.Menu1 ul li a{
-    text-decoration:none;
-    color: white;
-}
-div.Menu1 ul li a:hover{
-    text-decoration:none;
-   font-size: 22px;
- 
-}
+        div#Contenedor {
+            position: fixed;
+            margin-left: -30px;
+            margin-top: -10px;
+            height: 100%;
+            text-align: center;
+            background-color: black;
+            color: white;
+            width: 40%;
+            max-width: 1024px;
+        }
+
+        img {
+            width: 80%;
+        }
 
 
+        div.Menu1 ul li {
+            font-family: 'Rubik Mono One', sans-serif;
+            padding: 15px 10px;
+            list-style: none;
+            border-bottom: 1px solid white;
+            margin-right: 20px;
+            font-size: 150%;
+            
 
-</style>
+        }
+
+        div.Menu1 ul li a {
+            text-decoration: none;
+            color: white;
+            width: 90%;
+        }
+
+        div.Menu1 ul li a:hover {
+            text-decoration: none;
+            font-size: 22px;
+            width: 90%;
+        }
+    </style>
 </head>
+
 <body>
-   
-<div id="Contenedor">
-   
-<div class="Menu1">
-    <ul>
-        <li><img class="titulo" src="./Imagenes/nombre2.jpg"></li>
-        <li><a href="Integrantes.html">Integrantes</a></li>
-        <li><a href="Giras.html">Giras</a></li>
-        <li><a href="Tienda.html">Tienda</a></li>
-        <li><a href="Tienda.html">Discos</a></li>
-    </ul>
-</div>
-</div>
+
+    <div id="Contenedor">
+
+        <div class="Menu1">
+            <ul>
+                <li><img class="titulo" src="./Imagenes/nombre2.jpg"></li>
+                <li><a href="Integrantes.html">Integrantes</a></li>
+                <li><a href="Giras.html">Giras</a></li>
+                <li><a href="Tienda.html">Tienda</a></li>
+                <li><a href="Tienda.html">Discos</a></li>
+            </ul>
+        </div>
+    </div>
 
 
 
@@ -87,5 +89,6 @@ div.Menu1 ul li a:hover{
 
 
 
-   </body>
+</body>
+
 </html>
