--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             margin-top: -10px;
             height: 100%;
             text-align: center;
-            background-color: black;
+            background-color: black; 
             color: white;
             width: 40%;
             max-width: 1024px;
@@ -68,7 +68,7 @@
 </head>
 
 <body>
-
+   
     <div id="Contenedor">
 
         <div class="Menu1">
@@ -78,6 +78,7 @@
                 <li><a href="Giras.html">Giras</a></li>
                 <li><a href="Tienda.html">Tienda</a></li>
                 <li><a href="Tienda.html">Discos</a></li>
+                <li> <embed src="./Canciones/ejemplo.mp3" autostart=false true loop=true width="263" height="186"></li>
             </ul>
         </div>
     </div>
@@ -87,8 +88,7 @@
 
 
 
-
-
+   
 </body>
 
 </html>
