--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
                 <li><a href="Integrantes.html">Integrantes</a></li>
                 <li><a href="Giras.html">Giras</a></li>
                 <li><a href="Tienda.html">Tienda</a></li>
-                <li><a href="Tienda.html">Discos</a></li>
-                <li> <embed src="./Canciones/ejemplo.mp3" autostart=false true loop=true width="263" height="186"></li>
+                <li><a href="discos.html">Discos</a></li>
+               <!--  <li> <embed src="./Canciones/ejemplo.mp3" autostart=false true loop=true width="263" height="186"></li> -->
             </ul>
         </div>
     </div>
