--- a/index.html
+++ b/index.html
@@ -63,6 +63,8 @@
             text-decoration: none;
             font-size: 22px;
             width: 90%;
+            color:yellow;
+            border-color: yellow;
         }
     </style>
 </head>
@@ -77,7 +79,7 @@
                 <li><a href="Integrantes.html">Integrantes</a></li>
                 <li><a href="Giras.html">Giras</a></li>
                 <li><a href="Tienda.html">Tienda</a></li>
-                <li><a href="discos.html">Discos</a></li>
+                <li><a href="discos.html">Discografía</a></li>
                <!--  <li> <embed src="./Canciones/ejemplo.mp3" autostart=false true loop=true width="263" height="186"></li> -->
             </ul>
         </div>
