--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
             text-decoration: none;
             font-size: 22px;
             width: 90%;
-            color:yellow;
-            border-color: yellow;
+            color:rgb(228, 228, 13);
+            
         }
     </style>
 </head>
