--- a/Integrantes.html
+++ b/Integrantes.html
@@ -58,12 +58,12 @@ background-color: black;
 
 }
 tr td a:hover{
-            font-size: 100%;
+            font-size: 110%;
         }
         tr td a{
             text-decoration: none;
             color: yellow;
-            font-size: 90%;
+            font-size: 100%;
         }
       td{
           padding-left:5% ;
@@ -71,6 +71,7 @@ tr td a:hover{
           padding-top:5% ;
           padding-bottom:5% ;
           font-size: 130%;
+          text-align: center;
       }
       p#Integrantes {
             font-family: 'Viga', sans-serif;
@@ -89,20 +90,43 @@ tr td a:hover{
 
 
  img#uno{
-width: 120%;
+width: 150%;
+border: white;
+border-style:solid ;
 }
  img#dos{
-    width: 70%;
+    width: 150%;
+    border: white;
+border-style:solid ;
 }
  img#tres{
-    width: 70%;
+    width: 150%;
+    border: white;
+border-style:solid ;
 }
 img#cuatro{
-    width: 120%;
+    width: 95%;
+    border: white;
+border-style:solid ;
 }
+td.arriba{
+    padding-top: 0%;
+    
 
+}
+td.q{
+    padding-top: 0%;
+     text-align: right;
 
-
+}
+td.w{
+    padding-top: 0%;
+    text-align: right;
+}
+td.e{
+    padding-top: 0%;
+    text-align: right;
+}
       
 
 
@@ -136,10 +160,16 @@ img#cuatro{
     <div class="Contenedor1">
 <table>
     <tr>        
-        <td ><img id="uno" src="./Imagenes/Taylor.png" ></td>
-        <td ><img id="dos" src="./Imagenes/ben.jpg"></td>>
-        <td ><img id="tres" src="./Imagenes/mark.jpg"></td>
+        <td ><img id="uno" src="./Imagenes/taylor1.png" ></td>
+        <td ><img id="dos" src="./Imagenes/ben1.jpg"></td>>
+        <td ><img id="tres" src="./Imagenes/mark1.jpg"></td>
         <td ><img id="cuatro" src="./Imagenes/jamie.jpg"></td>
+    </tr>
+    <tr>
+        <td class="q"><p><a href="https://equipboard.com/pros/taylor-momsen">Taylor Momsen</a></p><p>Vocalista y guitarra</p></td>
+        <td class="e"><p><a href="https://equipboard.com/pros/ben-phillips">Ben Phillips</a></p><p>Guitarrista solista</p></td>
+        <td class="w"><p><a href="https://equipboard.com/pros/mark-damon">Mark Damon</a></p><p>Bajo</p></td>
+        <td class="arriba"><p><a href="https://equipboard.com/pros/jamie-perkins">Jamie Perkins</a></p><p>Baterista</p></td>
     </tr>
 </table>
 
