--- a/discos.html
+++ b/discos.html
@@ -52,7 +52,10 @@
 
 
         }
-
+     img{
+         border-style:solid ;
+         border-color:white;
+     }
         div#Lista1 ul li a:hover {
             font-size: 180%;
             color: rgb(228, 228, 13);
