--- a/Giras.html
+++ b/Giras.html
@@ -138,7 +138,7 @@
             <ul>
                 <li><a href="index.html">Inicio</a></li>
                 <li><a href="Integrantes.html">Integrantes</a></li>
-                <li><a href="Discos.html">Discos</a></li>
+                <li><a href="discos.html">Discos</a></li>
                 <li><a href="Tienda.html">Tienda</a></li>
 
             </ul>
