--- a/Tienda.html
+++ b/Tienda.html
@@ -86,7 +86,7 @@
                     <ul>
                         <li><a href="index.html">Inicio</a></li>
                         <li><a href="Integrantes.html">Integrantes</a></li>
-                        <li><a href="Discos.html">Discos</a></li>
+                        <li><a href="discos.html">Discos</a></li>
                         <li><a href="Giras.html">Tienda</a></li>
         
                     </ul>
