--- a/Integrantes.html
+++ b/Integrantes.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+        <link rel="icon" href="./Imagenes/nombre2.jpg"/>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -100,12 +101,12 @@ border-style:solid ;
 border-style:solid ;
 }
  img#tres{
-    width: 155%;
+    width: 170%;
     border: white;
 border-style:solid ;
 }
 img#cuatro{
-    width: 95%;
+    width: 94%;
     border: white;
 border-style:solid ;
 }
