--- a/Giras.html
+++ b/Giras.html
@@ -31,7 +31,7 @@
         p#Discos {
             font-family: 'Viga', sans-serif;
             color: white;
-            font-size: 580%;
+            font-size: 7vw;
             display: flex;
             justify-content: center;
 
@@ -58,14 +58,14 @@
 
 
         div#Lista1 ul li a:hover {
-            font-size: 180%;
+            font-size:2.4vw;
             color: rgb(228, 228, 13);
         }
 
         div#Lista1 ul li a {
             text-decoration: none;
             color: white;
-            font-size: 190%;
+            font-size: 2.5vw;
         }
 
         div#Lista1 ul {
@@ -95,7 +95,7 @@
         tr td {
             margin-right: 20%;
             margin-left: 20%;
-            font-size: 140%;
+            font-size: 1.6vw;
    padding-right: 10%;
 
         }
@@ -116,7 +116,7 @@
 td  a:hover{
     color: yellow;
     text-decoration: none;
-    font-size:90% ;
+    font-size:1.5vw ;
     font-family: 'Viga', sans-serif;
 }
         
