--- a/Integrantes.html
+++ b/Integrantes.html
@@ -39,13 +39,13 @@ margin-right: 3%;
 
 }
 div#Lista1 ul li a:hover {
-            font-size: 180%;
+            font-size: 2.4vw;
             color: rgb(228, 228, 13);
         }
         div#Lista1 ul li a {
             text-decoration: none;
             color: white;
-            font-size: 190%;
+            font-size: 2.5vw;
         }
         div#Lista1 ul {
 
@@ -59,25 +59,25 @@ background-color: black;
 
 }
 tr td a:hover{
-            font-size: 95%;
+            font-size: 1.5vw;
         }
         tr td a{
             text-decoration: none;
             color: yellow;
-            font-size: 100%;
+            font-size:1.6vw;
         }
       td{
           padding-left:5% ;
           padding-right:5% ;
           padding-top:5% ;
           padding-bottom:5% ;
-          font-size: 130%;
+          font-size: 1.4vw;
           text-align: center;
       }
       p#Integrantes {
             font-family: 'Viga', sans-serif;
             color: white;
-            font-size: 580%;
+            font-size: 7vw;
             display: flex;
             justify-content: center;
             margin: 0%;
@@ -101,7 +101,7 @@ border-style:solid ;
 border-style:solid ;
 }
  img#tres{
-    width: 170%;
+    width: 155%;
     border: white;
 border-style:solid ;
 }
