--- a/Tienda.html
+++ b/Tienda.html
@@ -13,6 +13,8 @@
             height: 220%;
         }
 
+    
+  
         div.Contenedor1 {
             border-color: white;
             border-style: solid;
@@ -54,6 +56,7 @@
 
 
         }
+        
      img{
          border-style:solid ;
          border-color:white;
@@ -62,14 +65,14 @@
          margin-bottom: 10%;
      }
         div#Lista1 ul li a:hover {
-            font-size: 180%;
+            font-size: 2.4vw;
             color: rgb(228, 228, 13);
         }
 
         div#Lista1 ul li a {
             text-decoration: none;
             color: white;
-            font-size: 190%;
+            font-size: 2.5vw;
         }
 
         div#Lista1 ul {
@@ -90,7 +93,7 @@ tr td {
 }
 p{
     font-family: 'Viga', sans-serif;
-    font-size:150% ;
+    font-size:1.7vw ;
     color: white;
 }
  td p a{
@@ -100,8 +103,10 @@ p{
 td p a:hover{
     color: yellow;
     text-decoration: none;
-    font-size:90% ;
+    font-size:1.6vw ;
 }
+
+
 
     </style>
 </head>
